// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provision/hooks/useServiceOptions should get service data from request 1`] = `
[
  {
    "label": <DatabaseTypeLogo
      dbType="MySQL"
      logoUrl=""
    />,
    "options": [
      {
        "label": "Julian Lueilwitz (aromatic-hammock.org)",
        "value": "42343",
      },
      {
        "label": "Gloria Kessler (zigzag-loneliness.com)",
        "value": "30152",
      },
      {
        "label": "Tyler Mitchell (guilty-marmalade.org)",
        "value": "5801",
      },
      {
        "label": "Brent West (oddball-doughnut.com)",
        "value": "16515",
      },
      {
        "label": "Tabitha Herzog (disloyal-sunlamp.org)",
        "value": "22995",
      },
      {
        "label": "Nicole Barrows (delightful-sense.net)",
        "value": "27015",
      },
      {
        "label": "Nicolas Sawayn (active-hosiery.name)",
        "value": "86240",
      },
      {
        "label": "Miguel Spinka II (droopy-footrest.com)",
        "value": "48495",
      },
      {
        "label": "Roger Gutkowski (well-made-modification.name)",
        "value": "13543",
      },
      {
        "label": "Brett Rippin (plush-wind.name)",
        "value": "53533",
      },
      {
        "label": "Gilberto Feil (quixotic-scheduling.info)",
        "value": "67069",
      },
      {
        "label": "Ms. Christine Bradtke I (palatable-workout.biz)",
        "value": "45638",
      },
      {
        "label": "Jermaine Ondricka (massive-guacamole.biz)",
        "value": "20534",
      },
      {
        "label": "Dr. Blanca Olson (gentle-retirement.info)",
        "value": "22430",
      },
      {
        "label": "Cory Lesch (soulful-dhow.biz)",
        "value": "68337",
      },
      {
        "label": "Frances Kris (elegant-bra.info)",
        "value": "47972",
      },
      {
        "label": "Shannon Flatley (unnatural-finish.info)",
        "value": "24435",
      },
      {
        "label": "Kendra Christiansen (pointless-current.info)",
        "value": "92836",
      },
      {
        "label": "Ethel Pagac (canine-bench.biz)",
        "value": "61669",
      },
      {
        "label": "Mrs. Marlene Miller (same-moose.biz)",
        "value": "70731",
      },
    ],
  },
]
`;

exports[`provision/hooks/useServiceOptions should get service data from request 2`] = `
[
  {
    "label": <DatabaseTypeLogo
      dbType="MySQL"
      logoUrl=""
    />,
    "options": [
      {
        "label": "Julian Lueilwitz (aromatic-hammock.org)",
        "value": "Julian Lueilwitz",
      },
      {
        "label": "Gloria Kessler (zigzag-loneliness.com)",
        "value": "Gloria Kessler",
      },
      {
        "label": "Tyler Mitchell (guilty-marmalade.org)",
        "value": "Tyler Mitchell",
      },
      {
        "label": "Brent West (oddball-doughnut.com)",
        "value": "Brent West",
      },
      {
        "label": "Tabitha Herzog (disloyal-sunlamp.org)",
        "value": "Tabitha Herzog",
      },
      {
        "label": "Nicole Barrows (delightful-sense.net)",
        "value": "Nicole Barrows",
      },
      {
        "label": "Nicolas Sawayn (active-hosiery.name)",
        "value": "Nicolas Sawayn",
      },
      {
        "label": "Miguel Spinka II (droopy-footrest.com)",
        "value": "Miguel Spinka II",
      },
      {
        "label": "Roger Gutkowski (well-made-modification.name)",
        "value": "Roger Gutkowski",
      },
      {
        "label": "Brett Rippin (plush-wind.name)",
        "value": "Brett Rippin",
      },
      {
        "label": "Gilberto Feil (quixotic-scheduling.info)",
        "value": "Gilberto Feil",
      },
      {
        "label": "Ms. Christine Bradtke I (palatable-workout.biz)",
        "value": "Ms. Christine Bradtke I",
      },
      {
        "label": "Jermaine Ondricka (massive-guacamole.biz)",
        "value": "Jermaine Ondricka",
      },
      {
        "label": "Dr. Blanca Olson (gentle-retirement.info)",
        "value": "Dr. Blanca Olson",
      },
      {
        "label": "Cory Lesch (soulful-dhow.biz)",
        "value": "Cory Lesch",
      },
      {
        "label": "Frances Kris (elegant-bra.info)",
        "value": "Frances Kris",
      },
      {
        "label": "Shannon Flatley (unnatural-finish.info)",
        "value": "Shannon Flatley",
      },
      {
        "label": "Kendra Christiansen (pointless-current.info)",
        "value": "Kendra Christiansen",
      },
      {
        "label": "Ethel Pagac (canine-bench.biz)",
        "value": "Ethel Pagac",
      },
      {
        "label": "Mrs. Marlene Miller (same-moose.biz)",
        "value": "Mrs. Marlene Miller",
      },
    ],
  },
]
`;

exports[`provision/hooks/useServiceOptions should get service data from request when isNeedFilterByOperationPermission is true 1`] = `
[
  {
    "label": <DatabaseTypeLogo
      dbType="MySQL"
      logoUrl=""
    />,
    "options": [
      {
        "label": "Julian Lueilwitz (aromatic-hammock.org)",
        "value": "42343",
      },
    ],
  },
]
`;

exports[`provision/hooks/useServiceOptions should get service data from request when isNeedFilterByOperationPermission is true 2`] = `
[
  {
    "label": <DatabaseTypeLogo
      dbType="MySQL"
      logoUrl=""
    />,
    "options": [
      {
        "label": "Julian Lueilwitz (aromatic-hammock.org)",
        "value": "Julian Lueilwitz",
      },
      {
        "label": "Gloria Kessler (zigzag-loneliness.com)",
        "value": "Gloria Kessler",
      },
      {
        "label": "Tyler Mitchell (guilty-marmalade.org)",
        "value": "Tyler Mitchell",
      },
      {
        "label": "Brent West (oddball-doughnut.com)",
        "value": "Brent West",
      },
      {
        "label": "Tabitha Herzog (disloyal-sunlamp.org)",
        "value": "Tabitha Herzog",
      },
      {
        "label": "Nicole Barrows (delightful-sense.net)",
        "value": "Nicole Barrows",
      },
      {
        "label": "Nicolas Sawayn (active-hosiery.name)",
        "value": "Nicolas Sawayn",
      },
      {
        "label": "Miguel Spinka II (droopy-footrest.com)",
        "value": "Miguel Spinka II",
      },
      {
        "label": "Roger Gutkowski (well-made-modification.name)",
        "value": "Roger Gutkowski",
      },
      {
        "label": "Brett Rippin (plush-wind.name)",
        "value": "Brett Rippin",
      },
      {
        "label": "Gilberto Feil (quixotic-scheduling.info)",
        "value": "Gilberto Feil",
      },
      {
        "label": "Ms. Christine Bradtke I (palatable-workout.biz)",
        "value": "Ms. Christine Bradtke I",
      },
      {
        "label": "Jermaine Ondricka (massive-guacamole.biz)",
        "value": "Jermaine Ondricka",
      },
      {
        "label": "Dr. Blanca Olson (gentle-retirement.info)",
        "value": "Dr. Blanca Olson",
      },
      {
        "label": "Cory Lesch (soulful-dhow.biz)",
        "value": "Cory Lesch",
      },
      {
        "label": "Frances Kris (elegant-bra.info)",
        "value": "Frances Kris",
      },
      {
        "label": "Shannon Flatley (unnatural-finish.info)",
        "value": "Shannon Flatley",
      },
      {
        "label": "Kendra Christiansen (pointless-current.info)",
        "value": "Kendra Christiansen",
      },
      {
        "label": "Ethel Pagac (canine-bench.biz)",
        "value": "Ethel Pagac",
      },
      {
        "label": "Mrs. Marlene Miller (same-moose.biz)",
        "value": "Mrs. Marlene Miller",
      },
    ],
  },
]
`;
